--- a/src/main/res/layout/activity_meizhi_layout.xml
+++ b/src/main/res/layout/activity_meizhi_layout.xml
@@ -2,18 +2,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/item_backgroud_normal">
 
     <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/contentLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <include layout="@layout/view_toolbar"/>
 
-        <include layout="@layout/refresh_layout"/>
+        <include layout="@layout/refresh_layout"></include>
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
+            android:id="@+id/meizhi_FAB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|bottom"
