--- a/src/main/res/layout/smile_itemview.xml
+++ b/src/main/res/layout/smile_itemview.xml
@@ -1,32 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<?xml version="1.0" encoding="utf-8"?><!--<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_smile"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
     android:clickable="true"
-    app:cardCornerRadius="4dp"
+    android:layout_margin="8dp"
+    app:cardCornerRadius="2dp"
     app:cardElevation="4dp">
+</android.support.v7.widget.CardView>-->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/smile_item"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:background="@drawable/item_backgroud">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tv_smile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/tv_smile"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:layout_marginLeft="@dimen/smile_text_margin" />
+    <TextView
+        android:id="@+id/tv_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textSize="14sp" />
 
-        <TextView
-            android:id="@+id/tv_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"/>
-    </LinearLayout>
+</LinearLayout>
 
-</android.support.v7.widget.CardView>
