--- a/src/main/res/menu/menu_main.xml
+++ b/src/main/res/menu/menu_main.xml
@@ -7,4 +7,10 @@
         android:orderInCategory="100"
         android:title="@string/smile_author"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/about_app"
+        android:orderInCategory="100"
+        android:title="关于我"
+        app:showAsAction="never"/>
 </menu>
