--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -2,10 +2,17 @@
 <resources>
 
     <color name="window_background">#FFF5F5F5</color>
+
     <color name="refresh_progress_1">#e91e63</color>
     <color name="refresh_progress_2">#00b0ff</color>
     <color name="refresh_progress_3">#4b342f</color>
+
     <color name="smile_text">#4b342f</color>
     <color name="md_red_400">#e84e40</color>
+
+    <color name="item_backgroud">@android:color/transparent</color>
+    <color name="item_backgroud_normal">#ffffff</color>
+
+    <color name="meizhi_layout_backgroud">#000000</color>
 
 </resources>
