--- a/src/main/res/layout/meizhi_view.xml
+++ b/src/main/res/layout/meizhi_view.xml
@@ -6,9 +6,9 @@
 
     <ImageView
         android:id="@+id/imageview_meizhi"
-        android:layout_centerInParent="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"/>
 
     <include layout="@layout/view_toolbar"/>
 
