--- a/src/main/res/menu/menu_main.xml
+++ b/src/main/res/menu/menu_main.xml
@@ -11,6 +11,6 @@
     <item
         android:id="@+id/about_app"
         android:orderInCategory="100"
-        android:title="关于我"
+        android:title="关于App"
         app:showAsAction="never"/>
 </menu>
