--- a/src/main/res/layout/activity_meizhi.xml
+++ b/src/main/res/layout/activity_meizhi.xml
@@ -15,7 +15,7 @@
         <include layout="@layout/refresh_layout"></include>
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/meizhi_FAB"
+            android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|bottom"
