--- a/src/main/res/layout/meizhi_listitem_view.xml
+++ b/src/main/res/layout/meizhi_listitem_view.xml
@@ -2,14 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="2dp">
+    android:orientation="vertical">
 
-    <me.zsj.smile.ui.MeizhiImageView
+    <me.zsj.smile.ui.view.MeizhiImageView
         android:id="@+id/meizhi_imageview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:scaleType="fitXY" />
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"/>
+
+    <LinearLayout
+        android:id="@+id/meizhi_desc_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/item_desc_backgroud"
+        android:padding="10dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginBottom="4dp">
+        <TextView
+            android:id="@+id/meizhi_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textSize="14sp" />
+    </LinearLayout>
 
 </LinearLayout>
