--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="desc_item_backgroud">#eeeeee</color>
     <color name="desc_item_press">@android:color/transparent</color>
 
+    <color name="nav_backgroud">#ffffff</color>
+
 </resources>
