--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -1,16 +1,18 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
+
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include layout="@layout/view_toolbar"/>
+        <include layout="@layout/view_toolbar" />
 
-        <include layout="@layout/refresh_layout"/>
+        <include layout="@layout/refresh_layout" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
@@ -25,4 +27,13 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
-</FrameLayout>
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/nav_backgroud"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_headerlayout"
+        app:menu="@menu/nav_menu" />
+</android.support.v4.widget.DrawerLayout>
