--- a/src/main/res/layout/item_smile.xml
+++ b/src/main/res/layout/item_smile.xml
@@ -12,14 +12,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/smile_item"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@drawable/item_backgroud">
+    android:layout_margin="2dp"
+    android:background="@drawable/bg_card">
 
     <TextView
         android:id="@+id/tv_smile"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp" />
 
