--- a/src/main/res/layout/item_meizhi.xml
+++ b/src/main/res/layout/item_meizhi.xml
@@ -13,8 +13,7 @@
         android:id="@+id/meizhi_imageview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:layout_margin="3dp"/>
+        android:adjustViewBounds="true"/>
 
     <LinearLayout
         android:id="@+id/meizhi_desc_item"
