--- a/src/main/res/layout/item_smile.xml
+++ b/src/main/res/layout/item_smile.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?><!--<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_smile"
+    android:id="@+id/smile_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
-    android:layout_margin="8dp"
+    android:padding="16dp"
+    android:layout_margin="2dp"
+    android:foreground="?attr/selectableItemBackground"
     app:cardCornerRadius="2dp"
-    app:cardElevation="4dp">
-</android.support.v7.widget.CardView>-->
+    app:cardElevation="4dp"> </android.support.v7.widget.CardView>-->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/smile_item"
     android:layout_width="match_parent"
@@ -30,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:textSize="14sp" />
-
 </LinearLayout>
+
+
 
