--- a/src/main/res/layout/item_meizhi.xml
+++ b/src/main/res/layout/item_meizhi.xml
@@ -9,7 +9,7 @@
     android:layout_marginBottom="2dp"
     android:orientation="vertical">
 
-    <me.zsj.smile.ui.view.MeizhiImageView
+    <me.zsj.smile.widget.MeizhiImageView
         android:id="@+id/meizhi_imageview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
