--- a/src/main/res/layout/activity_meizhi_and_smile.xml
+++ b/src/main/res/layout/activity_meizhi_and_smile.xml
@@ -47,7 +47,8 @@
         <ImageView
             android:id="@+id/image_meizhi"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"/>
 
     </LinearLayout>
 
