可以收藏妹纸了，修改UI配色

--- a/src/main/res/layout/activity_meizhi_list.xml
+++ b/src/main/res/layout/activity_meizhi_list.xml
@@ -12,7 +12,7 @@
 
         <include layout="@layout/view_toolbar"/>
 
-        <include layout="@layout/refresh_layout"></include>
+        <include layout="@layout/refresh_layout"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
