--- a/src/main/res/layout/activity_love_collect.xml
+++ b/src/main/res/layout/activity_love_collect.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <include layout="@layout/view_toolbar"/>
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/lovetext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="love love love love love"
-        android:textSize="24sp"/>
-</LinearLayout>
+        <include layout="@layout/view_toolbar" />
+
+        <include layout="@layout/refresh_layout" />
+
+    </android.support.design.widget.CoordinatorLayout>
+</FrameLayout>
