--- a/src/main/res/layout/activity_meizhi_and_smile.xml
+++ b/src/main/res/layout/activity_meizhi_and_smile.xml
@@ -48,7 +48,7 @@
             android:id="@+id/image_meizhi"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"/>
+            android:scaleType="fitCenter"/>
 
     </LinearLayout>
 
