--- a/src/main/res/layout/item_meizhi.xml
+++ b/src/main/res/layout/item_meizhi.xml
@@ -6,7 +6,7 @@
     android:id="@+id/item_card"
     android:layout_marginLeft="1dp"
     android:layout_marginRight="1dp"
-    android:layout_marginBottom="2dp"
+    android:layout_marginTop="2dp"
     android:orientation="vertical">
 
     <me.zsj.smile.widget.MeizhiImageView
