--- a/src/main/res/layout/item_smile.xml
+++ b/src/main/res/layout/item_smile.xml
@@ -1,38 +1,54 @@
-<?xml version="1.0" encoding="utf-8"?><!--<android.support.v7.widget.CardView
+<?xml version="1.0" encoding="utf-8"?>
+
+<!--
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/smile_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
-    android:padding="16dp"
     android:layout_margin="2dp"
     android:foreground="?attr/selectableItemBackground"
     app:cardCornerRadius="2dp"
-    app:cardElevation="4dp"> </android.support.v7.widget.CardView>-->
+    app:cardElevation="2dp">
+    </android.support.v7.widget.CardView>
+-->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/smile_item"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
+    android:layout_height="wrap_content"
     android:layout_margin="2dp"
     android:background="@drawable/bg_card">
 
-    <TextView
-        android:id="@+id/tv_smile"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp" />
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginRight="1dp"
+        android:background="?attr/selectableItemBackground">
 
-    <TextView
-        android:id="@+id/tv_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textSize="14sp" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/tv_smile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/tv_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="14sp" />
+    </LinearLayout>
+
+</FrameLayout>
+
+
 
 
 
