--- a/src/main/res/layout/meizhi_view.xml
+++ b/src/main/res/layout/meizhi_view.xml
@@ -7,8 +7,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#212121">
+        android:layout_height="match_parent">
 
         <uk.co.senab.photoview.PhotoView
             android:id="@+id/iv_photo"
