--- a/src/main/res/menu/nav_menu.xml
+++ b/src/main/res/menu/nav_menu.xml
@@ -4,6 +4,10 @@
 
     <group android:checkableBehavior="single">
 
+        <item android:id="@+id/home"
+            android:title="@string/nav_home"
+            android:icon="@mipmap/ic_explore_home_normal"/>
+
         <item android:id="@+id/meizhi"
             android:title="@string/nav_meizhi"
             android:icon="@mipmap/ic_local_florist_white_24dp"/>
@@ -11,7 +15,6 @@
         <item android:id="@+id/collect"
             android:title="@string/nav_collect"
             android:icon="@mipmap/ab_fav_active"/>
-
     </group>
 
 </menu>
