--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1,12 +1,21 @@
 <resources>
 
-    <!-- Base application theme.  <item name="colorAccent">#7DB9B3</item>-->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <!-- Base application theme.  <item name="colorAccent">#7DB9B3</item>
         <item name="colorPrimary">#166678</item>
         <item name="colorPrimaryDark">#0E2E3B</item>
-        <item name="colorAccent">#FBC02D</item>
-
+    -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">#DDDB6A</item>
+        <item name="colorPrimaryDark">#51AF5B</item>
+        <item name="colorAccent">#DDDB6A</item>
+        <item name="toolbarStyle">@style/LightToolbar</item>
     </style>
+
+
+    <style name="LightToolbar" parent="Widget.AppCompat.Toolbar">
+        <item name="titleTextColor">#5D4037</item>
+    </style>
+
 
     <style name="AppTheme.Activity" parent="AppTheme">
         <item name="android:windowBackground">@android:color/transparent</item>
