--- a/src/main/res/layout/item_love.xml
+++ b/src/main/res/layout/item_love.xml
@@ -7,5 +7,6 @@
     <me.zsj.smile.widget.MeizhiImageView
         android:id="@+id/love_imageView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="1dp"/>
 </LinearLayout>
