--- a/src/main/res/layout/item_meizhi.xml
+++ b/src/main/res/layout/item_meizhi.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/bg_card"
     android:id="@+id/item_card"
     android:layout_marginLeft="1dp"
@@ -13,6 +13,7 @@
         android:id="@+id/meizhi_imageview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
         android:adjustViewBounds="true"/>
 
     <LinearLayout
@@ -26,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textSize="14sp" />
+            />
     </LinearLayout>
 
 </LinearLayout>
