--- a/src/main/res/layout/item_smile.xml
+++ b/src/main/res/layout/item_smile.xml
@@ -14,12 +14,15 @@
     app:cardElevation="2dp">
     </android.support.v7.widget.CardView>
 -->
-
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/smile_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp"
+    android:clickable="true"
+    android:layout_marginTop="2dp"
+    android:layout_marginLeft="1dp"
+    android:layout_marginRight="1dp"
     android:background="@drawable/bg_card">
 
     <LinearLayout
@@ -27,9 +30,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"
         android:background="?attr/selectableItemBackground">
 
         <TextView
@@ -46,7 +46,7 @@
             android:textSize="14sp" />
     </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
 
 
 
