--- a/src/main/res/layout/meizhi_view.xml
+++ b/src/main/res/layout/meizhi_view.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <uk.co.senab.photoview.PhotoView
+        <ImageView
             android:id="@+id/iv_photo"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
