--- a/src/main/res/layout/item_love.xml
+++ b/src/main/res/layout/item_love.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="1dp"
     android:orientation="vertical">
 
     <me.zsj.smile.widget.MeizhiImageView
         android:id="@+id/love_imageView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="1dp"/>
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"/>
 </LinearLayout>
