--- a/src/main/res/menu/menu_main.xml
+++ b/src/main/res/menu/menu_main.xml
@@ -2,6 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
+
+    <item android:id="@+id/love_collect_activity"
+        android:icon="@mipmap/ab_fav_normal"
+        android:title="@string/love_collect_activity"
+        app:showAsAction="ifRoom"
+        />
+
     <item
         android:id="@+id/smile_author"
         android:orderInCategory="100"
@@ -9,8 +16,8 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/about_app"
+        android:id="@+id/about"
         android:orderInCategory="100"
-        android:title="关于App"
+        android:title="@string/about"
         app:showAsAction="never"/>
 </menu>
