--- a/src/main/res/layout/item_love.xml
+++ b/src/main/res/layout/item_love.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="1dp"
-    android:orientation="vertical">
+    android:layout_marginLeft="2dp"
+    android:layout_marginRight="2dp"
+    android:layout_marginTop="4dp">
 
     <me.zsj.smile.widget.MeizhiImageView
         android:id="@+id/love_imageView"
@@ -11,4 +12,4 @@
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
         android:adjustViewBounds="true"/>
-</LinearLayout>
+</FrameLayout>
