--- a/src/main/res/layout/item_meizhi.xml
+++ b/src/main/res/layout/item_meizhi.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/bg_card"
     android:id="@+id/item_card"
     android:layout_marginLeft="1dp"
@@ -12,7 +12,7 @@
     <me.zsj.smile.widget.MeizhiImageView
         android:id="@+id/meizhi_imageview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"/>
 
     <LinearLayout
