修复关于App界面显示的问题

--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -12,6 +12,12 @@
         <!--<item name="toolbarStyle">@style/LightToolbar</item>-->
     </style>
 
+    <style name="CollapsingToolbarTitleStyle"
+        parent="@android:style/TextAppearance">
+        <item name="android:textColor">@android:color/transparent</item>
+    </style>
+
+
     <style name="AppTheme" parent="BaseTheme">
         <item name="android:fitsSystemWindows">true</item>
     </style>
